--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 
                 <div class="clock" >
                     <div class="words">
-                        <p>Our demo is</p>
-                        <h3>Coming Soon</h3>
-                        <p>stay tuned!</p>
+                        <p>La nostra demo sarà presto disponibile, rimanete sintonizzati!</p>
                     </div>                
                     <div class="hand hour" data-hour-hand></div>
                     <div class="hand minute" data-minute-hand></div>
@@ -47,13 +45,13 @@
                 </div>-->
                 <div class="about">
                     <!--<svg preserveAspectRatio="xMidYMid meet" data-bbox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" role="presentation" aria-hidden="true"><g><path d="M196,52V4H4v192h192v-48h4v52H0V0h200v52H196z"></path></g></svg>-->
-                    <h2>About LiberTitle</h2>
-                    <p>This is the product page for a new ILS (Intergrated Library System) called LiberTitle. We understand how there has been little innovation in this space, and how much something new is needed. Email apierson at libertitle.com to give your suggestions, or to signup for updates. </p>
+                    <h2>Su LiberTitle</h2>
+                    <p>Questa è la pagina del prodotto per un nuovo ILS (Sistema di Biblioteca Integrato) chiamato LiberTitle. Comprendiamo quanto ci sia stata poca innovazione in questo settore e quanto sia necessario qualcosa di nuovo. Per ulteriori informazioni, per rimanere aggiornato o per inviare suggerimenti, puoi inviare un'e-mail a apierson@libertitle.com.</p>
                 </div>  
             </main>
         </div>
         <footer>
-            <p>© 2023 by LiberTitle</p>
+            <p>© 2023 LiberTitle</p>
         </footer>
     </body>
     
